feat: 增加 Bot 配置文件编辑界面
